// Vitest Snapshot v1

exports[`exposeFrontmatter property > Vue2 -- when exposeFrontmatter set to false -- does NOT use defineExpose method from Vue3 1`] = `
"<script>const frontmatter = {\\"title\\":\\"Hello World\\",\\"description\\":\\"testing is the path to true happiness\\"}
export const title = \\"Hello World\\"
export const description = \\"testing is the path to true happiness\\"
export const excerpt = undefined
const head = {\\"title\\":\\"Hello World\\",\\"description\\":\\"testing is the path to true happiness\\"}
</script>"
`;

exports[`exposeFrontmatter property > Vue2 -- when exposeFrontmatter set to true -- does NOT use defineExpose method from Vue3 but does expose frontmattter 1`] = `
"<script>const frontmatter = {\\"title\\":\\"Hello World\\",\\"description\\":\\"testing is the path to true happiness\\"}
export const title = \\"Hello World\\"
export const description = \\"testing is the path to true happiness\\"
export const excerpt = undefined
export default { data() { return { frontmatter } } }

const head = {\\"title\\":\\"Hello World\\",\\"description\\":\\"testing is the path to true happiness\\"}
</script>"
`;

exports[`exposeFrontmatter property > Vue3 -- when exposeFrontmatter set to false -- does NOT use defineExpose to expose frontmatter 1`] = `
"<script setup>const frontmatter = {\\"title\\":\\"Hello World\\",\\"description\\":\\"testing is the path to true happiness\\"}
 const title = \\"Hello World\\"
 const description = \\"testing is the path to true happiness\\"
 const excerpt = undefined
const head = {\\"title\\":\\"Hello World\\",\\"description\\":\\"testing is the path to true happiness\\"}
</script>"
`;

exports[`exposeFrontmatter property > Vue3 -- when exposeFrontmatter set to true -- uses defineExpose method to expose to other components 1`] = `
"<script setup>const frontmatter = {\\"title\\":\\"Hello World\\",\\"description\\":\\"testing is the path to true happiness\\"}
 const title = \\"Hello World\\"
 const description = \\"testing is the path to true happiness\\"
 const excerpt = undefined
defineExpose({ frontmatter })
const head = {\\"title\\":\\"Hello World\\",\\"description\\":\\"testing is the path to true happiness\\"}
</script>"
`;
